--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
     font-family: 'Poppins';
     text-decoration: none;
     /* cursor: pointer; */
+    scroll-behavior: smooth;
+}
+
+html{
+    overflow-x: hidden;
 }
 
 :root{
@@ -27,7 +32,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0 120px;
-
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
 }
 
 .navbar a + a{
@@ -63,7 +68,7 @@ h3{
     width: 730px;
 }
 
-.about-content h4{
+h4{
     font-size: 34px;
     font-weight: 700;
     color: var(--text-color);
@@ -120,9 +125,29 @@ h2{
 
 .skill-swipe{
     display: flex;
-    flex-direction: row;
-    gap: 80px;
-    padding-top: 60px;
+    /* flex-direction: row;
+    padding-top: 60px; */
+    /* gap: 280px; */
+    margin: 100px auto;
+    width: 90%;
+    /* border: 5px solid white; */
+    overflow-x: auto;
+}
+
+.skill-swipe::-webkit-scrollbar {
+    display: none;
+}
+
+.skill-swipe:hover .group {
+  animation-play-state: paused !important;
+}
+
+.group{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    animation: spin 7s infinite linear;
 }
 
 .skills-box{
@@ -132,6 +157,14 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    padding: 1em;
+    flex: 0 0 280px;
+}
+
+@keyframes spin {
+    from {translate: 0;}
+    to {translate: -100%;}
 }
 
 .skills-box p{
@@ -142,8 +175,8 @@ h2{
 }
 
 .skill-icon{
-    height: 90px;
-    width: 90px;
+    height: 60px;
+    width: 60px;
     background-color: var(--bg-color);
     color: var(--second-bg-color);
     border-radius: 50%;
@@ -153,12 +186,265 @@ h2{
 }
 
 .skill-icon img{
-    height: 60px;
-    width: 60px;
+    height: 40px;
+    width: 40px;
 }
 
 /* Projects-section */
 
 .projects-section{
-    height: 400px;
+    height: 1100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.project-cards{
+    height: 770px;
+    display: flex;
+    gap: 60px;
+}
+
+.card{
+    height: 770px;
+    width: 630px;
+    border-bottom: none;
+    padding: 0;
+    position: relative;
+    color: var(--second-bg-color);
+}
+
+.project-img-container{
+    height: 700px;
+    border-radius:10%;
+    border: 1px solid black;
+    background-color: #D9D9D9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-name{
+    height: 160px;
+    width: inherit;
+    background-color: #fff;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-name p{
+    font-size: 57px;
+    font-weight: 700;
+}
+
+
+/* get in touch */
+
+.get-in-touch{
+    height: 1000px;
+    background-color: var(--second-bg-color);
+    color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.get-in-touch h2{
+    padding: 280px 0 70px;
+}
+
+.get-in-touch h5{
+    font-size: 27px;
+    font-weight: 600px;
+}
+
+.btn-container a{
+    height: 70px;
+    width: 290px;
+    border: 1px solid #D9D9D9 ;
+    color: var(--bg-color);
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-container a p{
+    font-size: 27px;
+    font-weight: 500;
+}
+
+.btn-container{
+    height: 70px;
+    width: 620px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.copyright{
+    font-size: 19px;
+    font-weight: 500;
+    padding: 280px 0 10px;
+}
+
+
+/* Print Design page -------------------------------------------------------------------------------*/
+
+/* Pd-heading */
+
+.Pd-heading{
+    height: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* billboad-container */
+
+.billboad-container{
+    height: 1000px;
+    position: relative;
+}
+
+.billboard-text{
+    position: absolute;
+    left: 200px;
+    top: 100px;
+}
+
+.billboad-img{
+    position: absolute;
+    right: 0;
+}
+
+/* line-container */
+
+.line-container{
+    position: relative;
+}
+
+.line-img{
+    position: absolute;
+    left: 230px;
+}
+
+
+/* door-hanger */
+
+.door-hanger{
+    height: 780px;
+    position: relative;
+}
+
+.pd-para{
+    font-size: 19px;
+    font-weight: 300;
+}
+
+.door-hanger .pd-para{
+    position: absolute;
+    left: 250px;
+    top: 670px;
+}
+
+.door-hanger img{
+    position: absolute;
+    left: 200px;
+    top: 120px;
+}
+
+/* newspaper-ad */
+
+.newspaper-ad{
+    height: 920px;
+    position: relative;
+}
+
+.newspaper-ad .pd-para{
+    position: absolute;
+    top: 170px;
+    right: 280px;
+}
+
+.newspaper-ad img{
+    position: absolute;
+    right: 40px;
+}
+
+/* Horizontal-flyer */
+
+.Horizontal-flyer{
+    position: relative;
+    height: 600px;
+}
+
+.Horizontal-flyer .pd-para{
+    position: absolute;
+    top: -65px;
+    left: 250px;
+}
+
+.Horizontal-flyer img{
+    position: absolute;
+    top: -120px;
+}
+
+/* vertical-flyer */
+
+.vertical-flyer{
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.vertical-flyer .pd-para{
+    position: absolute;
+    top: 20px;
+    left: 660px;
+}
+
+/* bobcat-container */
+
+.bobcat-container{
+    height: 1110px;
+    margin-top: 100px;
+    border-top: 1px solid black;
+    background-image: url(print-design-images/Group\ 21.png);
+    position: relative;
+    background-size: cover;
+}
+
+.bobcat-footer{
+    height: 100px;
+    width: 100vw;
+    padding: 0 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+}
+
+.bobcat-text{
+    position: absolute;
+    top: 50px;
+    left: 150px;
+}
+
+.bobcat-postcard{
+    position: absolute;
+    top: 460px;
+    width: 100vw;
+    display: flex;
+    justify-content: left;
+    padding: 0 325px;
 }
