--- a/style.css
+++ b/style.css
@@ -40,13 +40,13 @@ header{
 }
 
 .navbar a{
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 400;
     color: var(--second-bg-color);
 }
 
 h3{
-    font-size: 36px;
+    font-size: 35px;
     font-weight: 700;
     color: var(--second-bg-color);
 }
@@ -60,8 +60,8 @@ h3{
 }
 
 .main-img img{
-    height: 450px;
-    width: 450px;
+    height: 415px;
+    width: 415px;
     border-radius: 50%;
 }
 
@@ -70,20 +70,24 @@ h3{
 }
 
 h4{
-    font-size: 34px;
+    font-size: 30px;
     font-weight: 700;
     color: var(--text-color);
     margin: 0;
 }
 
-h2{
+.about-content h2{
     font-size: 57px;
+}
+
+h2{
+    font-size: 30px;
     font-weight: 600;
     margin: 0;
 }
 
 .about-content p{
-    font-size: 19px;
+    font-size: 14px;
     font-weight: 300;
     color: var(--text-color);
     margin: 0;
@@ -96,14 +100,19 @@ h2{
 }
 
 .resume-link p{
-    font-size: 34px;
+    font-size: 20px;
     font-weight: 600;
     color: var(--second-bg-color);
 }
 
+.resume-link img{
+    height: 17px;
+    width: 17px;
+}
+
 .resume-link a{
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     background-color: var(--second-bg-color);
     border-radius: 50%;
     display: flex;
@@ -204,8 +213,8 @@ h2{
 }
 
 .project-cards{
-    height: 780px;
-    width: 1320px;
+    height: 450px;
+    width: 1200px;
     display: flex;
     gap: 60px;
     max-width: 100%;
@@ -213,7 +222,7 @@ h2{
     scroll-behavior: smooth;
 }
 
-.projects-section button {
+.projects-section-button {
     position:absolute;
     height: 80px;
     width: 80px;
@@ -226,7 +235,7 @@ h2{
     transition: 0.2s ease-in-out;
 }
 
-.projects-section button:hover{
+.projects-section-button:hover{
     color: var(--bg-color);
     background-color: var(--second-bg-color);
 }
@@ -247,8 +256,8 @@ h2{
 }
 
 .card{
-    height: 770px;
-    width: 630px;
+    height: 445px;
+    width: 360px;
     border-bottom: none;
     padding: 0;
     position: relative;
@@ -256,7 +265,8 @@ h2{
 }
 
 .project-img-container{
-    height: 700px;
+    height: 440px;
+    width: 360px;
     border-radius:10%;
     border: 1px solid black;
     background-color: #D9D9D9;
@@ -265,8 +275,26 @@ h2{
     align-items: center;
 }
 
+.project-img-container img{
+    height: 335px;
+}
+
+#Digital-card img{
+    height: 410px;
+}
+
+#motion-card img{
+    height: 310px;
+    margin-bottom: 75px;
+}
+
+#video-card img{
+    height: 178px;
+    margin-bottom: 75px;
+}
+
 .project-name{
-    height: 160px;
+    height: 90px;
     width: 100%;
     background-color: #fff;
     border: 1px solid black;
@@ -279,7 +307,7 @@ h2{
 }
 
 .project-name p{
-    font-size: 57px;
+    font-size: 30px;
     font-weight: 700;
 }
 
@@ -315,6 +343,7 @@ h2{
     justify-content: center;
     align-items: center;
     transition: 0.2s ease-in;
+    gap: 10px;
 }
 
 .btn-container a:hover{
@@ -322,11 +351,11 @@ h2{
 }
 
 .btn-container a p:hover{
-    font-size: 30px;
+    font-size: 22px;
 }
 
 .btn-container a p{
-    font-size: 27px;
+    font-size: 20px;
     font-weight: 500;
     transition: 0.2s ease-in;
 }
