--- a/motion-graphic.css
+++ b/motion-graphic.css
@@ -14,16 +14,16 @@
 
 .billboard-text-mg{
     position: absolute;
-    left: 367px;
+    left: 490px;
     top: 145px;
 }
 
 .video-card-mg video{
     position: absolute;
-    right: -367px;
+    right: -440px;
     top: 100px;
-    max-height: 750px;
-    width: auto;
+    max-height: 668px;
+    width: 377px;
     border: 1px solid black;
     z-index: 10;
 }
@@ -35,10 +35,10 @@
 }
 
 .line-img-mg{
-     position: absolute;
+    position: absolute;
     height: 2672px;
     width: 1082.75px;
-    left: 70px;
+    left: 188px;
     top: 270px;
 }
 
@@ -61,28 +61,28 @@
 
 .comp1 img{
     position: absolute;
-    left: 777px;
+    left: 895px;
     height: 563px;
     top: 1334px;
 }
 
 .comp1img img{
     position: absolute;
-    left: 506px;
+    left: 624px;
     height: 812px;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .comp1img1 img{
     position: absolute;
-    left: 104px;
+    left: 222px;
     height: 960px;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .billboard-text-mg-comp1{
     position: absolute;
-    left: 854px;
+    left: 972px;
     top: 1213px;
     white-space: nowrap;
 }
@@ -91,7 +91,7 @@
 
 .comp2 img{
     position: absolute;
-    left: 59px;
+    left: 177px;
     height: 388.87px;
     top: 2860px;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -99,21 +99,21 @@
 
 .comp2img img{
     position: absolute;
-    left: 419.08px;
+    left: 537.08px;
     height: 388.87px;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .comp2gif img{
     position: absolute;
-    left: 780.01px;
+    left: 898.01px;
     height: 388.87px;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .billboard-text-mg-comp2{
     position: absolute;
-    left: 59px;
+    left: 177px;
     top: 2734px;
     white-space: nowrap;
 }
@@ -128,35 +128,35 @@
     position: absolute;
     height: 2017.82px;
     width: 980.86px;
-    left: 94px;
-    top: 3550px;
+    left: 230px;
+    top: 3495px;
 }
 
 /* Component 3 */
 .comp3 img{
     position: absolute;
-    left: 791px;
+    left: 909px;
     height: 425px;
     top: 4006px;
 }
 
 .comp3gif img{
     position: absolute;
-    left: 428px;
+    left: 546px;
     height: 354px;
 }
 
 /* Component 4 */
 .comp4 img{
     position: absolute;
-    left: 414px;
+    left: 532px;
     height: 339px;
     top: 4636px;
 }
 
 .comp4gif img{
     position: absolute;
-    left: 43px;
+    left: 161px;
     height: 494px;
 }
 
@@ -165,14 +165,14 @@
 
 .comp5 img{
     position: absolute;
-    left: 109px;
+    left: 227px;
     height: 524px;
     top: 5406px;
 }
 
 .comp5img img{
     position: absolute;
-    left: 830px;
+    left: 948px;
     height: 255px;
     width: 382px;
 }
@@ -180,7 +180,7 @@
 .comp5gif img{
     position: absolute;
     top: 5683px;
-    left: 830px;
+    left: 948px;
     height: 388.87px;
     width: 382px;
 }
